[🐛 Fix] Overflow on code

--- a/theme/static/sass/article.sass
+++ b/theme/static/sass/article.sass
@@ -38,7 +38,7 @@
         transform: translate(-50%, -50%)
         cursor: zoom-out
     code
-      background-color: var(--text-color)
+      background-color: #000
       color: var(--bg-color)
       padding: 4px 6px
       border-radius: 5px
@@ -46,8 +46,8 @@
     pre code
       width: 100%
       padding: 15px !important
-      display: inline-block
-      white-space: break-spaces
+      display: block
+      overflow: auto
     h1, h2
       font-weight: 500
       margin: 15px 0
